tests/netconvert/import/XML/errors/testsuite.netconvert
# Tests what happens if xml-edges can not be read
xml_false_edg

# Tests what happens if no xml-edges are given
xml_no_edg

# Tests what happens if xml-nodes can not be read
xml_false_nod

# Tests what happens if no xml-nodes are given
xml_no_nod

# Tests what happens if from-node and to-node are identical
xml_looped_edge

# invalid node id
node_id_invalid

# traffic light with illegal state
phase_state_invalid

# Tests what happens if a lane with invalid index is read
lane_index_invalid

# trying to set lane-specific attributes without fromLane, toLane
connection_attributes_invalid

# Tests for broken edges
broken_edge
